# cog

./: .gitignore  AGENTS.md  Cargo.toml  README.md  TODO.md
benchmark/: README.md  SWE-CI-GUIDE.md  TARGET.md  cog_terminus.py  evaluate_swe_ci.py  run_baseline.sh  run_cog.sh
benchmark/SWE-CI/: .gitignore  SWE-CI-GUIDE.md  clean_trajectories_log.sh  config_baseline.toml  config_cog.toml  config_cog_mini.toml  config_cog_pilot.toml  evaluate_swe_ci.py
benchmark/slop-code-bench/: COG_INTEGRATION_DESIGN.md  deepseek_run_dev.yaml  deepseek_run_full.yaml  deepseek_run_smoke.yaml  deepseek_run_test10.yaml  deepseek_run_val.yaml  pyproject.toml  run_baseline.sh  run_cog.sh
docs/: CLI_INTERFACE_V2.md  COGNITIVE_MODEL_DESIGN.md  LATENT_TO_CODE_MAPPING.md  README.md  RUST_ARCHITECTURE_REDESIGN.md
docs/architecture/: 01-overview.md  02-domain-layer.md  03-persistence-layer.md  04-analysis-layer.md  05-space-layer.md  06-workflow-layer.md  07-experiment-layer.md  08-output-layer.md
docs/archive/: COGNITIVE_MODEL_DESIGN.md  README.md
docs/concepts/: 01-failure-modes.md  02-descent-protocol.md
docs/decisions/: README.md
docs/reference/: 01-cli-reference.md  02-data-model.md  03-tms-cascade.md
docs/vision/: 01-problem-and-thesis.md  02-cognitive-model.md  03-latent-space.md
skills/cog/: BEST_PRACTICES.md  BRANCHING.md  SKILL.md  WORKFLOWS.md
src/: cli.rs  command.rs  domain.rs  format.rs  main.rs  repo.rs  space.rs  usage.rs
src/analysis/: c.rs  extract.rs  extractors.rs  go.rs  java.rs  javascript.rs  languages.rs  mod.rs  pool.rs  (+5 more)
tests/: integration.rs
(+132 files in other folders)
