[package]
name = "cog"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
rusqlite = { version = "0.40.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
thiserror = "2.0.18"
toml = "1.1.2"
uuid = { version = "1.23.2", features = ["v4"] }
tree-sitter = "0.26.9"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.2"
tree-sitter-javascript = "0.25.0"
tree-sitter-c = "0.24.2"
tree-sitter-go = "0.25.0"
tree-sitter-java = "0.23.5"
ignore = "0.4.26"

[dev-dependencies]
tempfile = "3.27.0"
